Lets change a few things...

--- a/src/@lekoarts/gatsby-theme-minimal-blog/texts/bottom.mdx
+++ b/src/@lekoarts/gatsby-theme-minimal-blog/texts/bottom.mdx
@@ -1,4 +1,4 @@
 <Title text="Frequent Links" />
 
-- [3D Art with Cinema4D](https://www.lekoarts.de/art/3d?utm_source=minimal-blog&utm_medium=Theme)
-- [Landscape Photography](https://www.lekoarts.de/art/photography?utm_source=minimal-blog&utm_medium=Theme)
+- [Extreme Fabric Engine 9.0.2.0 User Guide](https://documentation.extremenetworks.com/FABRICENGINE/SW/902/FabricEngineUserGuide/downloads/FabricEngineUserGuide_9.0.2_UG.pdf)
+- [FortiGate 7.2.7 Administrator Guide](https://docs.fortinet.com/document/fortigate/7.2.7/administration-guide/954635/getting-started)
