--- a/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
+++ b/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
@@ -1,6 +1,11 @@
-<Text children={`Hi.`} sx={{ fontSize: [4, 5, 6], fontWeight: `bold`, color: `heading` }} />
+<Text children={`{Hello_World!}`} sx={{ fontSize: [4, 5, 6], fontWeight: `bold`, color: `heading` }} />
 
-I'm LekoArts, your theme creator. I'm passionate about open source & teaching. Learn more about Gatsby & React on [my website](https://www.lekoarts.de?utm_source=minimal-blog&utm_medium=Starter).
+100 Packets in the router buffer.
+100 Packets in the router buffer.
+Kick one on, pass it on.
+99 Packets in the router buffer.
+100000 Packets in the router buffer.
+Request Timed Out...
 
 
 <a rel="me" href="https://infosec.exchange/@N3rdyUn1c0rn">
