--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -5,4 +5,4 @@ slug: "/about"
 
 Hi!
 
-I'm LekoArts, a designer turned software engineer passionate about open source & teaching. Learn more about Gatsby & React on [my website](https://www.lekoarts.de?utm_source=minimal-blog&utm_medium=Starter).
+I'm N3rdyUn1c0rn, this is a website, if you are seeing this, the internet is still working...for now...
