--- a/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
+++ b/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
@@ -2,7 +2,7 @@
 
 100 Packets in the router buffer.
 100 Packets in the router buffer.
-Kick one on, pass it on.
+Kick one on, pass it along.
 99 Packets in the router buffer.
 100000 Packets in the router buffer.
 Request Timed Out...
