couple more things

--- a/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
+++ b/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
@@ -4,6 +4,8 @@
 100 Packets in the router buffer.
 Kick one on, pass it along.
 99 Packets in the router buffer.
+1000 Packets in the router buffer.
+10000 Packets in the router buffer.
 100000 Packets in the router buffer.
 Request Timed Out...
 
