Can we change the color?

--- a/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
+++ b/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
@@ -1,13 +1,13 @@
 <Text children={`{Hello_World!}`} sx={{ fontSize: [4, 5, 6], fontWeight: `bold`, color: `heading` }} />
 
-100 Packets in the router buffer.
-100 Packets in the router buffer.
-Kick one on, pass it along.
-99 Packets in the router buffer.
-1000 Packets in the router buffer.
-10000 Packets in the router buffer.
-100000 Packets in the router buffer.
-Request Timed Out...
+100 Packets in the router buffer.\
+100 Packets in the router buffer.\
+Kick one on, pass it along.\
+99 Packets in the router buffer.\
+1000 Packets in the router buffer.\
+10000 Packets in the router buffer.\
+100000 Packets in the router buffer.\
+Request Timed Out.....
 
 
 <a rel="me" href="https://infosec.exchange/@N3rdyUn1c0rn">
