--- a/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
+++ b/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
@@ -12,3 +12,5 @@ Request Timed Out.....
 
 <a rel="me" href="https://infosec.exchange/@N3rdyUn1c0rn">
 </a>
+<a rel="me" href="https://lgbtqia.space/@N3rdyUn1c0rn">
+</a>
